// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`job summary > renders a failing ratchet report 1`] = `
"## 🌍 xcstrings-lint — failed

5 new issues vs \`main\`.

Checked 1 catalog across 3 languages.

### Coverage

| Language | Before | After | Δ | New issues |
|---|---|---|---|---|
| \`de\` | 100% | 100% | — | 0 |
| \`fr\` | 100% | 33.3% | 🔻 66.7% | **2** |
| \`ja\` | 100% | 0% | 🔻 100% | **3** |

### Issues found

| Class | Errors | Warnings |
|---|---|---|
| Missing | 4 | 0 |
| Empty | 1 | 0 |

<details open><summary>New issues (5)</summary>

| Key | fr | ja |
|---|---|---|
| \`payment_save_card_title\` | ✓ | ✕ missing |
| \`payment_save_card_subtitle\` | ✕ missing | ✕ missing |
| \`payment_cvv_hint\` | ⚠ empty | ✕ missing |

</details>"
`;

exports[`job summary > renders an absolute-mode report 1`] = `
"## 🌍 xcstrings-lint — failed

1 language below the 100% threshold.

Checked 1 catalog across 2 languages.

### Coverage

| Language | Coverage | Threshold | Status |
|---|---|---|---|
| \`de\` | 100% | 100% | ✓ |
| \`fr\` | 50% | 100% | ✕ below |

### Issues found

| Class | Errors | Warnings |
|---|---|---|
| Missing | 1 | 0 |

<details open><summary>Issues (1)</summary>

| Key | fr |
|---|---|
| \`b\` | ✕ missing |

</details>"
`;

exports[`sticky comment > renders a failing ratchet report 1`] = `
"### 🌍 xcstrings-lint — **failed**

**5 new issues** across 2 languages vs \`main\`.

| Language | Before | After | Δ | New issues |
|---|---|---|---|---|
| \`de\` | 100% | 100% | — | 0 |
| \`fr\` | 100% | 33.3% | 🔻 66.7% | **2** |
| \`ja\` | 100% | 0% | 🔻 100% | **3** |

<details><summary>New issues (5)</summary>

| Key | fr | ja |
|---|---|---|
| \`payment_save_card_title\` | ✓ | ✕ missing |
| \`payment_save_card_subtitle\` | ✕ missing | ✕ missing |
| \`payment_cvv_hint\` | ⚠ empty | ✕ missing |

</details>

<sub>Mode: \`ratchet\` · <!-- xcstrings-lint --></sub>"
`;

exports[`sticky comment > renders a passing ratchet report 1`] = `
"### 🌍 xcstrings-lint — **passed**

No new localization issues vs \`main\`.

| Language | Before | After | Δ | New issues |
|---|---|---|---|---|
| \`de\` | 100% | 100% | — | 0 |
| \`fr\` | 100% | 100% | — | 0 |

<sub>Mode: \`ratchet\` · <!-- xcstrings-lint --></sub>"
`;

exports[`sticky comment > renders an absolute-mode report 1`] = `
"### 🌍 xcstrings-lint — **failed**

**1 language** below the 100% threshold: \`fr\` at 50%.

| Language | Coverage | Threshold | Status |
|---|---|---|---|
| \`de\` | 100% | 100% | ✓ |
| \`fr\` | 50% | 100% | ✕ below |

<details><summary>Issues (1)</summary>

| Key | fr |
|---|---|
| \`b\` | ✕ missing |

</details>

<sub>Mode: \`absolute\` · <!-- xcstrings-lint --></sub>"
`;
